tests/errors/vis_private/vis_private_sub.fs
module rec vis_private.vis_private_sub

let private privateFun () = ()
